Revert "upgrade javassist to 3.30.2-GA"
This reverts commit 7c57e2e16fbf45f118fbb5ccd2da1735a74fe218.