@@ -16,18 +16,21 @@
 
 package org.hotswap.agent.javassist;
 
-import org.hotswap.agent.javassist.bytecode.ClassFile;
-import org.hotswap.agent.javassist.bytecode.Descriptor;
-import org.hotswap.agent.javassist.util.proxy.DefineClassHelper;
-import org.hotswap.agent.javassist.util.proxy.DefinePackageHelper;
-
-import java.io.*;
+import java.io.BufferedInputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.net.URL;
 import java.security.ProtectionDomain;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.Hashtable;
 import java.util.Iterator;
+
+import org.hotswap.agent.javassist.bytecode.ClassFile;
+import org.hotswap.agent.javassist.bytecode.Descriptor;
+import org.hotswap.agent.javassist.util.proxy.DefinePackageHelper;
 
 /**
  * A container of <code>CtClass</code> objects.
@@ -109,14 +112,6 @@ public class ClassPool {
      * <p>The initial value is true.
      */
     public static boolean releaseUnmodifiedClassFile = true;
-
-    /**
-     * If true, the contents of a jar file are cached after the jar
-     * file is opened.
-     *
-     * <p>The initial value is true.
-     */
-    public static boolean cacheOpenedJarFile = true;    // see ClassPoolTail.JarClassPath#openClassfile(String)
 
     protected ClassPoolTail source;
     protected ClassPool parent;
@@ -298,7 +293,7 @@ public class ClassPool {
     }
 
     /**
-     * Returns all the package names recorded by <code>importPackage()</code>. 
+     * Returns all the package names recorded by <code>importPackage()</code>.
      *
      * @see #importPackage(String)
      * @since 3.1
@@ -471,7 +466,7 @@ public class ClassPool {
      * that classname can be an array-type "descriptor" (an encoded
      * type name) such as <code>[Ljava/lang/Object;</code>.
      *
-     * <p>Using this method is not recommended; this method should be 
+     * <p>Using this method is not recommended; this method should be
      * used only to obtain the <code>CtClass</code> object
      * with a name returned from <code>getClassInfo</code> in
      * <code>javassist.bytecode.ClassPool</code>.  <code>getClassInfo</code>
@@ -535,7 +530,7 @@ public class ClassPool {
      * @return null if the class file could not be found.
      */
     protected CtClass createCtClass(String classname, boolean useCache) {
-        // accept "[L<class name>;" as a class name. 
+        // accept "[L<class name>;" as a class name.
         if (classname.charAt(0) == '[')
             classname = Descriptor.toClassName(classname);
 
@@ -887,7 +882,7 @@ public class ClassPool {
      * the new interface overwrites that previous one.
      *
      * @param name      a fully-qualified interface name.
-     *                  Or null if the annotation has no super interface. 
+     *                  Or null if the annotation has no super interface.
      * @throws RuntimeException if the existing interface is frozen.
      * @since 3.19
      */
@@ -1022,8 +1017,8 @@ public class ClassPool {
      * allowed any more.
      * To load the class, this method uses the context class loader
      * of the current thread.  It is obtained by calling
-     * <code>getClassLoader()</code>.  
-     * 
+     * <code>getClassLoader()</code>.
+     *
      * <p>This behavior can be changed by subclassing the pool and changing
      * the <code>getClassLoader()</code> method.
      * If the program is running on some application
@@ -1044,21 +1039,21 @@ public class ClassPool {
      * protection domain is not specified.</p>
      *
      * @see #toClass(CtClass,Class)
-     * @see #toClass(CtClass,Class, ClassLoader,ProtectionDomain)
+     * @see #toClass(CtClass,Class,java.lang.ClassLoader,ProtectionDomain)
      * @see #getClassLoader()
      */
     public Class toClass(CtClass clazz) throws CannotCompileException {
         // Some subclasses of ClassPool may override toClass(CtClass,ClassLoader).
         // So we should call that method instead of toClass(.., ProtectionDomain).
-        return toClass(clazz, getClassLoader()); 
+        return toClass(clazz, getClassLoader());
     }
 
     /**
      * Get the classloader for <code>toClass()</code>, <code>getAnnotations()</code> in
      * <code>CtClass</code>, etc.
-     * 
+     *
      * <p>The default is the context class loader.
-     * 
+     *
      * @return the classloader for the pool
      * @see #toClass(CtClass)
      * @see CtClass#getAnnotations()
@@ -1066,10 +1061,10 @@ public class ClassPool {
     public ClassLoader getClassLoader() {
         return getContextClassLoader();
     }
-    
+
     /**
      * Obtains a class loader that seems appropriate to look up a class
-     * by name. 
+     * by name.
      */
     static ClassLoader getContextClassLoader() {
         return Thread.currentThread().getContextClassLoader();
@@ -1152,7 +1147,7 @@ public class ClassPool {
         throws CannotCompileException
     {
         try {
-            return DefineClassHelper.toClass(neighbor,
+            return org.hotswap.agent.javassist.util.proxy.DefineClassHelper.toClass(neighbor,
                                                             ct.toBytecode());
         }
         catch (IOException e) {
@@ -1178,7 +1173,7 @@ public class ClassPool {
         throws CannotCompileException
     {
         try {
-            return DefineClassHelper.toClass(lookup,
+            return org.hotswap.agent.javassist.util.proxy.DefineClassHelper.toClass(lookup,
                                                             ct.toBytecode());
         }
         catch (IOException e) {
@@ -1234,7 +1229,7 @@ public class ClassPool {
             throws CannotCompileException
     {
         try {
-            return DefineClassHelper.toClass(ct.getName(),
+            return org.hotswap.agent.javassist.util.proxy.DefineClassHelper.toClass(ct.getName(),
                     neighbor, loader, domain, ct.toBytecode());
         }
         catch (IOException e) {
@@ -1247,11 +1242,15 @@ public class ClassPool {
      * performs nothing.
      *
      * <p>You do not necessarily need to
-     * call this method.  If this method is called, then  
-     * <code>getPackage()</code> on the <code>Class</code> object returned 
+     * call this method.  If this method is called, then
+     * <code>getPackage()</code> on the <code>Class</code> object returned
      * by <code>toClass()</code> will return a non-null object.</p>
      *
-     * <p>The jigsaw module introduced by Java 9 has broken this method.</p>
+     * <p>The jigsaw module introduced by Java 9 has broken this method.
+     * In Java 9 or later, the VM argument
+     * <code>--add-opens java.base/java.lang=ALL-UNNAMED</code>
+     * has to be given to the JVM so that this method can run.
+     * </p>
      *
      * @param loader        the class loader passed to <code>toClass()</code> or
      *                      the default one obtained by <code>getClassLoader()</code>.
